@@ -1,3 +1,6 @@
+2011-01-03
+ * HIGHEST, WESTEAST queue types
+
 2010-12-26
  * added parameters for focusing weak images (e.g. from Ondrejov 65cm)
 
